# HisabKitab

./: .gitignore  LICENSE
backend/: .env.example  .gitignore  main.py  pyproject.toml
backend/config/: settings.py  urls.py
backend/connections/: models.py  serializers.py  views.py
backend/connections/migrations/: 0001_initial.py
backend/connections/tests/: test_connection_accept_reject.py  test_connections_creation.py
backend/core_transaction/: apps.py  models.py  serializers.py  signals.py  tests.py  views.py
backend/core_transaction/migrations/: 0001_initial.py
backend/entities/: models.py  serializers.py  tests.py  views.py
backend/entities/migrations/: 0001_initial.py  0002_alter_entity_type.py  0003_entity_current_balance.py
backend/payment_modes/: apps.py  constants.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/payment_modes/migrations/: 0001_initial.py  0002_supportedapp.py  0003_populate_supported_apps.py  0004_alter_payment_mode_linked_entity.py
backend/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_user_profile_image.py  0003_user_role.py
backend/users/tests/: test_login_api.py  test_user_profile_api.py
docs/: .gitignore  AGENT_WORKFLOW.md  README_docs.md  TODO.md  changelog.md
docs/schema/: hisab_kitab_schema.sql
docs/specs/: API.md  Hisab Kitab - SRS v1.md
frontend/: .gitignore  eslint.config.js  package-lock.json  package.json  tailwind.config.ts  test_output.txt  test_summary.txt  tsconfig.app.json  vite.config.ts
(+66 files in other folders)
